# python-parted

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  build.py  pyproject.toml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst  parted.alignment.rst  parted.constraint.rst  parted.device.rst  parted.disk.rst  parted.exceptions.rst  parted.excpt.rst  parted.filesys.rst  parted.geom.rst  parted.rst  parted.timer.rst  parted.util.rst  usage.rst
parted/: __init__.py  alignment.py  constraint.py  device.py  disk.py  exceptions.py  excpt.py  filesys.py  geom.py  timer.py  util.py
tests/: __init__.py  test_alignment.py  test_constraint.py  test_device.py  test_disk.py  test_exception.py  test_filesys.py  test_geometry.py  test_partition.py  test_timer.py
tests/util/: __init__.py  gptdsk.py  msdosdsk.py  partedtest.py
