[tool.poetry]
name = "python-parted"
version = "1.1.1"
license = "MIT"
readme = "README.md"
description = "Python interface to access the parted library"
authors = ["Adolfo Gómez García <dkmaster@dkmon.com>"]
packages = [
    {include = "parted"},
    {include = "parted/py.typed"}
]
include = [
    {path = "build.py", format="sdist" },
    {path = 'README.md', format="sdist"},
    {path = 'LICENSE', format="sdist"},
    {path = 'tests', format="sdist"},
    {path = 'docs/source', format="sdist"},
    {path = 'docs/Makefile', format="sdist"},
    {path = 'docs/make.bat', format="sdist"},
    {path = "parted/_parted.abi3.so", format="wheel"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Filesystems",
    "License :: OSI Approved :: MIT License",
]

repository = "https://github.com/dkmstr/python-parted"
documentation = "http://python-parted.readthedocs.io/"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.8.0"
cffi = ">=1.15.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.3"
mypy = ">=1.3.0"
black = ">=23.3.0"
ipython = ">=7.0.0"
coverage = ">=7.2.7"
pytest-cov = ">=4.1.0"
Sphinx = ">=6.0.0"
sphinx-rtd-theme = ">=1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0", "cffi>=1.15.1"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.9"
useLibraryCodeForTypes = true
typeCheckingMode = "basic"

[tool.mypy]
strict = false
show_error_codes = true
pretty = true

[tool.black]
line-length = 102
skip-string-normalization = true

[tool.pytest.ini_options]
#addopts = "--cov --cov-report html -s"
addopts = "-s"
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py"
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_level = "info"

[tool.coverage.run]
dynamic_context = "test_function"
source = [
    "parted",
]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if typing.TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
[tool.coverage.html]
show_contexts = true
title = "Parted Coverage Report"
